@@ -1,3 +1,9 @@
+2010-09-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* src/gen_list.c:
+	  - added bytecmp, has_str_changed, has_md_changed, compare_single_acl,
+	    has_acl_changed, cmp_xattr_node, have_xattrs_changed (copied and
+	    renamed from src/compare_db.c)
+
 2010-09-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/compare_db.h: removed init_rxlst function
 	* include/db_config.h: include seltree.h after #define DB_ATTR_TYPE
